--- a/css/helpers/mixins.scss
+++ b/css/helpers/mixins.scss
@@ -7,8 +7,9 @@
     -ms-border-radius: $raio;
     border-radius: $raio;
   }
-  
-  @mixin image-replacement {
+
+    // Placeholder
+  %image-replacement {
     text-indent: -9999px;
     overflow: hidden;
     background-repeat: no-repeat;
@@ -19,3 +20,10 @@
     box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
   }
   
+  // Placeholder
+  %sombra-padrao {
+
+    -webkit-box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
+  
+  }
