Trabalhando com media query

--- a/css/helpers/variaveis.scss
+++ b/css/helpers/variaveis.scss
@@ -4,6 +4,9 @@ $cor-padrao: darken(#c24e4b, 0); // darken deixa mais escuro a cor original(cor,
 $cor-auxiliar: lighten(#1e2c35, 0); //  lighten deixa mais clara a cor original(cor, %)
 $cor-branca: #fff;
 
+$ponto-de-quebra: 980px;
+$mq-mobile: "(max-width: 980px)";
+
 /* tipos de cores
 adjust-hue();
 
