--- a/css/layout/blog.scss
+++ b/css/layout/blog.scss
@@ -24,6 +24,12 @@
     width: 48%;
     display: inline-block;
     vertical-align: top;
+
+    @media #{mq-mobile} {
+      width: auto;
+
+    }
+
   }
   
   .post-destaque {
